# Artist

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  main.cpp  readme.md  settings.h
handlers/: base.cpp  base.h  handlers.cpp  handlers.h  nns.cpp  nns.h
scripts/: download_rudalle.py  get_cpplibs.sh  get_realesrgan.sh  get_rudalle.sh  get_tgbotlib.sh  setup.sh
services/: upscale.cpp  upscale.h  utils.cpp  utils.h
services/nns/: inference_realesrgan.py  inference_rudalle.py
static/: help.md
